added instagram scraping

--- a/apps/admin/views/layout.jade
+++ b/apps/admin/views/layout.jade
@@ -2,5 +2,12 @@
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    meta(name='viewport', content='initial-scale=1.0, user-scalable=no')
+    link(rel='stylesheet', href='/css/bootstrap.css')
+    link(rel='stylesheet', href='/css/bootstrap-responsive.css')
+
+    script(src='/js/vendor/jquery-1.7.2.min.js')
+    script(src='/js/vendor/bootstrap.js')
   body!= body
+
+
