--- a/apps/global/client/templates/wallItemTemplate.html
+++ b/apps/global/client/templates/wallItemTemplate.html
@@ -1,8 +1,2 @@
-<!-- Caption: <%= caption.text %>
-filter: <%= filter %>
-Time: <%= created_time %> -->
-<img src='<%= images.low_resolution.url %>' />
 
-<% for(var i = 0; i < comments.length; i++) { %>
-  
-<% } %>
+<img src='<%= url %>' />
