put db logic into repositories

--- a/apps/admin/views/parks/index.jade
+++ b/apps/admin/views/parks/index.jade
@@ -18,7 +18,7 @@ table.table.table-striped
       td
         a(href='/admin/parks/delete/#{park._id}') delete
       td 
-        a(href="/admin/parks/#{park._id}") edit
+        a(href="/admin/parks/edit/#{park._id}") edit
 
 a.btn(href='/admin/parks/new')
   | Add Park
