--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-div#wall ul{
+/*div#wall ul{
   list-style-type: none;
 }
 
@@ -7,6 +7,11 @@ div#wall ul li {
   margin: 10px;
   padding: 15px;
   box-shadow: 0 1px 3px #000;
+}*/
+
+ul li {
+  height: 400px;
+  overflow: hidden;
 }
 
 div#map_canvas {
